tests/negative/265/M.juvix
module M;

type Bool :=
  | true : Bool
  | false : Bool;

type Pair (A : Type) (B : Type) :=
  | mkPair : A → B → Pair A B;

f : _ → _
  | (mkPair false true) := true
  | true := false;

